config: try commitlint

--- a/src/core/i18n/csv/translations.csv
+++ b/src/core/i18n/csv/translations.csv
@@ -14,3 +14,4 @@ login,form_password_invalid_format,Invalid password format
 login,notification_error,Login Failed
 login,notification_success,Login Success
 login,cta_login,Login
+products,title,Products Catalogue
